--- a/package.json
+++ b/package.json
@@ -8,5 +8,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "mongoose": "^8.0.3"
-  }
+  },
+  "repository": "https://github.com/SulHyunRyung/node_test1.git",
+  "author": "SulHyunRyung <tirofiralr@gmail.com>"
 }
